@@ -1,5 +1,8 @@
 2006-12-28 Werner Hoch <werner.ho@gmx.de>
 
+	* src/x_image.c: replaced the browse button with an icon.
+	  Misc cosmetics.
+
 	* src/x_autonumber.c: switched the autonumber dialog to GtkDialog,
 	  fixed a bug when unselecting the "remove numbers" CheckButton
 
